package de.altwagen.Request;

public enum RequestStatus
{
    PENDING,    // new request
    ACCEPTED,   // employee accepted request
    DENIED,     // employee denied request
    CANCELLED   // customer cancelled request
}
