package de.altwagen.Request;

public enum RequestType
{
    SELL,   // user wants to sell the car
    BUY;    // user wants to buy the car
}
